syntax = "proto3";

package signaling;

message SdpMessage {
    string type = 1; // "offer"  "answer"
    string sdp = 2;
}

// 2. ICE Candidate
message CandidateMessage {
    string sdpMid = 1;
    int32 sdpMLineIndex = 2;
    string sdp = 3;
}

message ClientInfo {
    string clientId = 1;
    string sdp = 2;
    string candidate = 3;
}

service SignalingService {
    //(Offer, Answer, Candidate)
    rpc SendMessage (ClientInfo) returns (ClientInfo) {}
    
    // (JoinRoom)
    rpc JoinRoom (ClientInfo) returns (stream ClientInfo) {}
}
